# proofseed

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  UPGRADE.md  codecov.yml  proofmodule.json  proofseed.pro  proofseed_tests.pro
cmake/: ProofSeedConfig.cmake
features/: proofseed.prf
include/proofseed/: asynqro_extra.h  future.h  planting.h  proofalgorithms.h  proofseed_global.h  spinlock.h  spinlock_p.h  tasks.h
include/proofseed/helpers/: prooftypetraits.h  tuplemaker.h  zipper.h
src/: future.cpp  spinlock.cpp  tasks.cpp
src/proofseed/: dummy.cpp  future.cpp  spinlock.cpp  tasks.cpp
tests/: algorithms_flatten_test.cpp  algorithms_map_test.cpp  algorithms_test.cpp  future_test.cpp  tasks_test.cpp  tests.pro
tests/proofseed/: CMakeLists.txt  algorithms_flatten_test.cpp  algorithms_map_test.cpp  algorithms_test.cpp  asynqro_extra_test.cpp  future_exceptions_test.cpp  future_test.cpp  main.cpp  tasks_test.cpp
